# QuantAlchemy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: sma_crossover_analysis.py
pages/: 1_Data.py  2_Backtest.py  3_Portfolio.py  4_Factors.py  5_Regime.py  6_WalkForward.py  7_Lab.py  8_Tearsheet.py  9_Alpha.py
quantalchemy/: config.py
quantalchemy/alpha/: __init__.py  discovery.py
quantalchemy/backtest/: __init__.py  engine.py  metrics.py  strategy.py
quantalchemy/data/: __init__.py  base.py  binance.py  bybit.py  coinbase.py  csv_loader.py  yahoo.py
quantalchemy/factors/: __init__.py  factors.py
quantalchemy/lab/: __init__.py  strategy_lab.py
quantalchemy/portfolio/: __init__.py  black_litterman.py  markowitz.py  risk_parity.py
quantalchemy/regime/: __init__.py  detector.py
quantalchemy/tearsheet/: __init__.py  report.py
quantalchemy/utils/: helpers.py
quantalchemy/walkforward/: __init__.py  analyzer.py
tests/: test_alpha.py  test_backtest.py  test_data.py  test_factors.py  test_lab.py  test_portfolio.py  test_regime.py  test_tearsheet.py  test_walkforward.py
