[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantalchemy"
version = "0.1.0"
description = "Quantitative trading platform"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "plotly>=5.24.0",
    "streamlit>=1.38.0",
    "pyarrow>=17.0.0",
    "hmmlearn>=0.3.2",
    "cvxpy>=1.5.0",
    "statsmodels>=0.14.2",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "catboost>=1.2.0",
    "httpx>=0.28.0",
    "openpyxl>=3.1.0",
]

[tool.setuptools.packages.find]
include = ["quantalchemy*"]
